fixed video aspect ratio and nav menu z-index

--- a/src/Components/Nav/nav.css
+++ b/src/Components/Nav/nav.css
@@ -8,7 +8,7 @@
   background-color: rgb(51, 51, 54);
   width: 65%;
   min-height: 100%;
-  z-index: 100;
+  z-index: 500;
   transform: translateX(65vw);
 }
 
